# A_Maze_ing

./: .gitignore  LICENSE.md  Makefile  README.md  config.txt  pyproject.toml
src/: a_maze_ing.py  config_parser.py  graphics_engine.py  mazegen.py
src/mlx/: mlx.py
src/mlx/test/: mlxtest.py  simple_test.py
