[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.1.0"
description = "A maze generator"
readme = "README.md"
authors = [
    { name="Ricardo Paparoni", email="ripaparo@student.42madrid.com" },
    { name="Csenge Kakula", email="csekakul@student.42madrid.com" }
]
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["mazegen"]